external-crates/move/tools/move-cli/tests/build_tests/include_exclude_stdlib/args.exp
Command `build -v`:
BUILDING build_include_exclude_stdlib
error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:3:7
  │
3 │   use std::signer;
  │       ^^^^^^^^^^^ Invalid 'use'. Unbound module: '(std=0x1)::signer'

warning[W09002]: unused variable
  ┌─ ./sources/UseSigner.move:5:16
  │
5 │   public fun f(account: &signer): address {
  │                ^^^^^^^ Unused parameter 'account'. Consider removing or prefixing with an underscore: '_account'

error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:6:5
  │
6 │     signer::address_of(account)
  │     ^^^^^^ Unbound module alias 'signer'

Command `-d -v build`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING build_include_exclude_stdlib
